--- a/netlify.toml
+++ b/netlify.toml
@@ -3,3 +3,16 @@ included_files = ["node_modules/.geo/**"]
 
 [[plugins]]
 package = "@netlify/plugin-nextjs"
+
+
+[build]
+  command = "yarn build"
+  publish = ".dist"
+  functions = "netlify/functions"
+
+[build.environment]
+  NEXT_TELEMETRY_DISABLED = "1"
+  NODE_VERSION = "18"
+
+[dev]
+  framework = "nextjs"
